syntax = "proto3";

package anychat.friend;

import "google/protobuf/timestamp.proto";
import "common/common.proto";

option go_package = "github.com/anychat/server/api/proto/friend;friendpb";

// FriendService 好友服务
service FriendService {
  // GetFriendList 获取好友列表
  rpc GetFriendList(GetFriendListRequest) returns (GetFriendListResponse);

  // SendFriendRequest 发送好友申请
  rpc SendFriendRequest(SendFriendRequestRequest) returns (SendFriendRequestResponse);

  // HandleFriendRequest 处理好友申请（接受/拒绝）
  rpc HandleFriendRequest(HandleFriendRequestRequest) returns (common.Empty);

  // GetFriendRequests 获取好友申请列表
  rpc GetFriendRequests(GetFriendRequestsRequest) returns (GetFriendRequestsResponse);

  // DeleteFriend 删除好友
  rpc DeleteFriend(DeleteFriendRequest) returns (common.Empty);

  // UpdateRemark 更新好友备注
  rpc UpdateRemark(UpdateRemarkRequest) returns (common.Empty);

  // AddToBlacklist 添加到黑名单
  rpc AddToBlacklist(AddToBlacklistRequest) returns (common.Empty);

  // RemoveFromBlacklist 从黑名单移除
  rpc RemoveFromBlacklist(RemoveFromBlacklistRequest) returns (common.Empty);

  // GetBlacklist 获取黑名单列表
  rpc GetBlacklist(GetBlacklistRequest) returns (GetBlacklistResponse);

  // IsFriend 检查是否是好友（供其他服务调用）
  rpc IsFriend(IsFriendRequest) returns (IsFriendResponse);

  // IsBlocked 检查是否被拉黑（供其他服务调用）
  rpc IsBlocked(IsBlockedRequest) returns (IsBlockedResponse);

  // BatchCheckFriend 批量检查好友关系
  rpc BatchCheckFriend(BatchCheckFriendRequest) returns (BatchCheckFriendResponse);
}

// Friend 好友信息
message Friend {
  string user_id = 1;
  string remark = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  common.UserInfo user_info = 5;  // 用户基本信息（从user-service获取）
}

// FriendRequest 好友申请
message FriendRequest {
  int64 id = 1;
  string from_user_id = 2;
  string to_user_id = 3;
  string message = 4;
  string source = 5;  // search/qrcode/group/contacts
  string status = 6;  // pending/accepted/rejected/expired
  google.protobuf.Timestamp created_at = 7;
  common.UserInfo from_user_info = 8;  // 申请人信息
}

// BlacklistItem 黑名单项
message BlacklistItem {
  int64 id = 1;
  string user_id = 2;
  string blocked_user_id = 3;
  google.protobuf.Timestamp created_at = 4;
  common.UserInfo blocked_user_info = 5;  // 被拉黑用户信息
}

// GetFriendListRequest 获取好友列表请求
message GetFriendListRequest {
  string user_id = 1;
  optional int64 last_update_time = 2;  // 增量同步
}

// GetFriendListResponse 获取好友列表响应
message GetFriendListResponse {
  repeated Friend friends = 1;
  int64 total = 2;
}

// SendFriendRequestRequest 发送好友申请请求
message SendFriendRequestRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  string message = 3;
  string source = 4;
}

// SendFriendRequestResponse 发送好友申请响应
message SendFriendRequestResponse {
  int64 request_id = 1;
  bool auto_accepted = 2;  // 是否自动通过
}

// HandleFriendRequestRequest 处理好友申请请求
message HandleFriendRequestRequest {
  string user_id = 1;  // 当前用户ID（申请接收方）
  int64 request_id = 2;
  string action = 3;  // accept/reject
}

// GetFriendRequestsRequest 获取好友申请列表请求
message GetFriendRequestsRequest {
  string user_id = 1;
  string type = 2;  // received/sent
}

// GetFriendRequestsResponse 获取好友申请列表响应
message GetFriendRequestsResponse {
  repeated FriendRequest requests = 1;
  int64 total = 2;
}

// DeleteFriendRequest 删除好友请求
message DeleteFriendRequest {
  string user_id = 1;
  string friend_id = 2;
}

// UpdateRemarkRequest 更新备注请求
message UpdateRemarkRequest {
  string user_id = 1;
  string friend_id = 2;
  string remark = 3;
}

// AddToBlacklistRequest 添加黑名单请求
message AddToBlacklistRequest {
  string user_id = 1;
  string blocked_user_id = 2;
}

// RemoveFromBlacklistRequest 移除黑名单请求
message RemoveFromBlacklistRequest {
  string user_id = 1;
  string blocked_user_id = 2;
}

// GetBlacklistRequest 获取黑名单请求
message GetBlacklistRequest {
  string user_id = 1;
}

// GetBlacklistResponse 获取黑名单响应
message GetBlacklistResponse {
  repeated BlacklistItem items = 1;
  int64 total = 2;
}

// IsFriendRequest 检查好友关系请求
message IsFriendRequest {
  string user_id = 1;
  string friend_id = 2;
}

// IsFriendResponse 检查好友关系响应
message IsFriendResponse {
  bool is_friend = 1;
}

// IsBlockedRequest 检查黑名单请求
message IsBlockedRequest {
  string user_id = 1;
  string target_user_id = 2;
}

// IsBlockedResponse 检查黑名单响应
message IsBlockedResponse {
  bool is_blocked = 1;
}

// BatchCheckFriendRequest 批量检查好友关系请求
message BatchCheckFriendRequest {
  string user_id = 1;
  repeated string friend_ids = 2;
}

// BatchCheckFriendResponse 批量检查好友关系响应
message BatchCheckFriendResponse {
  map<string, bool> results = 1;  // friend_id -> is_friend
}
